--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "gsap": "^3.13.0",
     "lenis": "^1.3.15",
+    "lucide-react": "^0.556.0",
     "postprocessing": "^6.38.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
